# Folio

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  fetch.rs  main.rs  obsidian.rs  templates.rs  ui.rs
