[package]
name = "folio-tui"
version = "0.2.0"
edition = "2021"
description = "A terminal UI for searching ArXiv and importing papers into Obsidian"
license = "MIT"
repository = "https://github.com/aetos-dev/folio"
keywords = ["arxiv", "obsidian", "papers", "tui", "research"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
# Async & Networking
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1"

# CLI Parsing & Terminal UI
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
inquire = "0.7"

# Serialization, Config & Paths
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5.0"
dirs = "5.0"
shellexpand = "3.1"

# Templating & Date
roxmltree = "0.19"
tera = "1.19"
chrono = "0.4"
anyhow = "1.0"

[[bin]]
name = "folio"
path = "src/main.rs"
